<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Junk Strings for testing, etc -->
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_activity_3">Activity_3</string>
    <string name="file">File</string>
    <string name="create_new">Create New</string>
    <string name="open">Open</string>
    <string name="new_game">NG</string>
    <string name="help">help</string>

    <!-- Action Bar Activity_Graphs Strings -->
    <string name="action_bar_video">Video</string>
    <string name="action_bar_graph">Graphs</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_undo">Undo</string>
    <string name="action_bar_set_scale">Set Scale</string>
    <string name="action_bar_set_origin">Set Origin</string>
    <string name="action_bar_export">Export</string>
    <string name="action_bar_export_text">Export to .txt</string>
    <string name="action_bar_export_excel">Export to Excel</string>
    
    <string name="action_bar_file_menu">Project</string>
    <string name="action_bar_open_project">Open Project</string>
    <string name="action_bar_new_project">New Project</string>
    
    
    <string name="action_bar_plot_points_stop">Stop Plotting Points</string>
    <string name="action_bar_plot_points_start">Start Plotting Points</string>
    <string name="action_bar_plot_points">Plot Points</string>
    
    <string name="action_bar_preferences">Preferences</string>
    <string name="preference_clear_data">Clear Data</string>
    <string name="action_bar_close_preferences">Close Preferences</string>
    
    <string name="title_activity_video">Video</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_graphing">Graphs</string>
    
    <string name="action_bar_change_video">Change Video</string>
    
    
    <string name="preference_save_option_title">Internal Device Storage</string>
    <string name="preference_save_option_summary">Save project to internal device storage?</string>
    <string name="preference_clear_data_summary">Clear all recorded data points.</string>
    <string name="preferences_title_project">Project</string>
    
    <!--  -->
    <string name="preference_measure_total_summary">Exclude Y data</string>
    <string name="preference_measure_total_title">X Value</string>
    <string name="preference_measure_y_summary">Exclude X data</string>
    <string name="preference_measure_y_title">Y Value</string>
    <string name="preference_measure_x_summary">Use both X and Y data</string>
    <string name="preference_measure_x_title">Total Distance</string>
    
    
    
    
    
</resources>