<PreferenceScreen xmlns:holo="http://schemas.android.com/apk/res-auto" 
   xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:key="preference_default_save_option"
            android:summary="@string/preference_save_option_summary"
            android:title="@string/preference_save_option_title" />

        <Preference
            android:key="preference_clear_all_data"
            android:summary="@string/preference_clear_data_summary"
            android:title="@string/preference_clear_data" />


    <EditTextPreference 
            android:key="preference_project_name"
            android:summary="Set the project name"
            android:title="Project Name:"
            android:text=""
            />
    
	<ListPreference
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:key="preferences_measure1"
            android:summary="Value(s) used to calculate the y-axis of graphs"
            android:title="Measure distance using:" />
</PreferenceScreen>